New branch for OmniFaces 4.0 development